--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
 peewee~=3.15.4
 pandas~=1.5.3
 Faker~=17.0.0
+pytest~=7.2.1
+Faker~=17.0.0
+attrs~=22.2.0
+colorama~=0.4.6
+iniconfig~=2.0.0
+numpy~=1.24.2
+packaging~=23.0
+pandas~=1.5.3
+peewee~=3.15.4
+pip~=22.3.1	2
+pluggy~=1.0.0
+pytest~=7.2.1
+python-dateutil~=2.8.2
+pytz~=2022.7.1
+setuptools~=65.5.1
+six~=1.16.0
+wheel~=0.38.4
